force-app/main/default/objects/Training_Details__c/Training_Details__c.object-meta.xml
<CustomObject>
    <label>Training Detail</label>
    <nameField>
        <displayFormat>TN-{0000000}</displayFormat>
        <label>Training Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>