force-app/main/default/objects/Training_Details__c/fields/DMS_dept_num__c.field-meta.xml
<CustomField>
    <fullName>DMS_dept_num__c</fullName>
    <label>DMS dept num</label>
    <length>10</length>
    <type>Text</type>
</CustomField>