force-app/main/default/objects/Training_Details__c/fields/DMS_hours_total__c.field-meta.xml
<CustomField>
    <fullName>DMS_hours_total__c</fullName>
    <label>DMS hours total</label>
    <length>50</length>
    <type>Text</type>
</CustomField>