force-app/main/default/objects/Training_Details__c/fields/DMS_Training_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Training_Id__c</fullName>
    <label>DMS Training Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>