force-app/main/default/objects/Training_Details__c/fields/EndExpiredDate__c.field-meta.xml
<CustomField>
    <fullName>EndExpiredDate__c</fullName>
    <label>End/Expired Date</label>
    <type>Date</type>
</CustomField>