force-app/main/default/objects/Training_Details__c/fields/NeverExpire__c.field-meta.xml
<CustomField>
    <fullName>NeverExpire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never Expire</label>
    <type>Checkbox</type>
</CustomField>