force-app/main/default/objects/Training_Details__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Training Details</relationshipLabel>
    <relationshipName>Training_Details</relationshipName>
    <type>Lookup</type>
</CustomField>