force-app/main/default/objects/Training_Details__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor/Trainer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>