force-app/main/default/objects/Training_Details__c/fields/StartActiveDate__c.field-meta.xml
<CustomField>
    <fullName>StartActiveDate__c</fullName>
    <label>Start/Active Date</label>
    <type>Date</type>
</CustomField>